# feedscope

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fce708c7a09c_initial_schema.py
backend/app/: config.py  main.py  telemetry.py
backend/app/auth/: dependencies.py
backend/app/db/: engine.py  models.py  scoped.py
backend/app/db/repos/: __init__.py  credentials_repo.py  fetch_log_repo.py  group_member_repo.py  group_repo.py  member_repo.py  post_repo.py  profile_repo.py  settings_repo.py  tag_repo.py  usage_daily_repo.py  watchlist_repo.py  watchlist_settings_repo.py  (+2 more)
backend/app/providers/: base.py  factory.py  mock.py
backend/app/routes/: dashboard.py  explore.py  external.py  groups.py  profiles.py  settings.py  translate.py  usage.py  watchlists.py  webhooks.py
backend/app/schemas/: explore.py  groups.py  settings.py  translate.py  watchlists.py  webhooks.py
backend/app/services/: ai_registry.py  batch_translate.py  fetch.py  prompt.py  sse_utils.py  translation.py
backend/app/shared/: types.py
backend/app/utils/: crypto.py
backend/tests/: conftest.py  test_dashboard.py  test_phase4_5_integration.py  test_phase4_translate.py  test_phase6_webhook_usage.py
backend/tests/integration/: test_auth.py  test_groups.py  test_health.py  test_settings.py  test_watchlists.py  test_webhooks.py
backend/tests/unit/: test_crypto.py  test_normalizer.py  test_sse_utils.py  test_translation.py
(+87 files in other folders)
